Fix custom.css from Tommy: avoid banner overlapping section headings
This prevents sticky headers from overlapping anchored heading links.

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 48px;
+}
+
 nav.md-tabs {
   display: none
 }
